completed functionality to add players

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -31,38 +31,38 @@
               </div>
               <div class="player">
                 <p>2</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="r2-id" class="input-id">
+                <input id="r2-cn" class="input-codename">
               </div>
               <div class="player">
                 <p>3</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="r3-id" class="input-id">
+                <input id="r3-cn" class="input-codename">
               </div>
               <div class="player">
                 <p>4</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="r4-id" class="input-id">
+                <input id="r4-cn" class="input-codename">
               </div>
               <div class="player">
                 <p>5</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="r5-id" class="input-id">
+                <input id="r5-cn" class="input-codename">
               </div>
               <div class="player">
                 <p>6</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="r6-id" class="input-id">
+                <input id="r6-cn" class="input-codename">
               </div>
               <div class="player">
                 <p>7</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="r7-id" class="input-id">
+                <input id="r7-cn" class="input-codename">
               </div>
               <div class="player">
                 <p>8</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="r8-id" class="input-id">
+                <input id="r8-cn" class="input-codename">
               </div>
             </div>
           </div>
@@ -82,38 +82,38 @@
               </div>
               <div class="player">
                 <p>2</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="g2-id" class="input-id">
+                <input id="g2-cn" class="input-codename">
               </div>
               <div class="player">
                 <p>3</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="g3-id" class="input-id">
+                <input id="g3-cn" class="input-codename">
               </div>
               <div class="player">
                 <p>4</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="g4-id" class="input-id">
+                <input id="g4-cn" class="input-codename">
               </div>
               <div class="player">
                 <p>5</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="g5-id" class="input-id">
+                <input id="g5-cn" class="input-codename">
               </div>
               <div class="player">
                 <p>6</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="g6-id" class="input-id">
+                <input id="g6-cn" class="input-codename">
               </div>
               <div class="player">
                 <p>7</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="g7-id" class="input-id">
+                <input id="g7-cn" class="input-codename">
               </div>
               <div class="player">
                 <p>8</p>
-                <input class="input-id">
-                <input class="input-codename">
+                <input id="g8-id" class="input-id">
+                <input id="g8-cn" class="input-codename">
               </div>
             </div>
           </div>
