--- a/Frontend/playeraction.html
+++ b/Frontend/playeraction.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 
-<body>
+<body >
   <div>
     <link href="./style.css" rel="stylesheet" />
 
@@ -36,10 +36,78 @@
           <br />
         </span>
         <div id="teams" class="teamheaders">
-          <span class="teamheaders-green">GREEN TEAM</span>
+          <span class="teamheaders-green">GREEN TEAM
+            <div class="player-line">
+              <div id="g1-n"></div>
+              <div id="g1-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="g2-n"></div>
+              <div id="g2-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="g3-n"></div>
+              <div id="g3-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="g4-n"></div>
+              <div id="g4-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="g5-n"></div>
+              <div id="g5-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="g6-n"></div>
+              <div id="g6-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="g7-n"></div>
+              <div id="g7-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="g8-n"></div>
+              <div id="g8-s"></div>
+            </div>
+            <div id="g-s" class="score"></div>
+          </span>
         </div>
         <div id="teams" class="teamheaders">
-          <span class="teamheaders-red">RED TEAM</span>
+          <span class="teamheaders-red">RED TEAM
+            <div class="player-line">
+              <div id="r1-n"></div>
+              <div id="r1-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="r2-n"></div>
+              <div id="r2-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="r3-n"></div>
+              <div id="r3-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="r4-n"></div>
+              <div id="r4-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="r5-n"></div>
+              <div id="r5-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="r6-n"></div>
+              <div id="r6-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="r7-n"></div>
+              <div id="r7-s"></div>
+            </div>
+            <div class="player-line">
+              <div id="r8-n"></div>
+              <div id="r8-s"></div>
+            </div>
+            <div id="r-s" class="score"></div>
+          </span>
         </div>
       </div>
       <div class="scorelisting">
@@ -50,6 +118,8 @@
       </div>
       <span class="timeremaining">Time Remaining: x</span>
   </div>
+
+  <script src="./playerAction.js"></script>
 </body>
 
 </html>
