--- a/Frontend/playeraction.html
+++ b/Frontend/playeraction.html
@@ -119,7 +119,7 @@
           <br />
         </span>
       </div>
-      <span class="timeremaining">Time Remaining: x</span>
+      <span id="time-remaining" class="timeremaining">Time Remaining: x</span>
   </div>
 
   <script src="./playerAction.js"></script>
