first implementation of random music tracks

--- a/Frontend/playeraction.html
+++ b/Frontend/playeraction.html
@@ -122,6 +122,10 @@
       <span id="time-remaining" class="timeremaining">Time Remaining: x</span>
   </div>
 
+
+  <!-- music tracks -->
+  <audio autoplay="autoplay" src=""></audio>
+
   <script src="./playerAction.js"></script>
 </body>
 
