--- a/Frontend/playeraction.html
+++ b/Frontend/playeraction.html
@@ -113,6 +113,7 @@
         </div>
         
       </div>
+
       <div class="scorelisting">
         <span class="playactiontext">
           <span>Current Game Action</span>
@@ -127,6 +128,7 @@
   <audio autoplay="autoplay" src=""></audio>
 
   <script src="./playerAction.js"></script>
+  <script src="./webClient.js"></script>
 </body>
 
 </html>
