added music track stuff to player entry screen

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -128,6 +128,9 @@
       <img class="splash-image" src="./assets/logo.jpg" alt="logo" />
     </div>
 
+      <!-- music tracks -->
+  <audio autoplay="autoplay" src=""></audio>
+  
     <!-- javascript -->
     <script src="./main.js"></script>
   </body>
