--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -119,7 +119,7 @@
           </div>
         </div>
     
-        <div class="footer">
+        <div class="footer"> <!-- footer-->
           <button id="start-button" class="start-button">START GAME</button>
         </div>
       </div>
